# ChangeLog for kde-base/konsolekalendar
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/konsolekalendar/ChangeLog,v 1.40 2006/03/26 17:50:52 agriffis Exp $

  26 Mar 2006; Aron Griffis <agriffis@gentoo.org>
  konsolekalendar-3.4.3.ebuild:
  Mark 3.4.3 stable on ia64

*konsolekalendar-3.5.2 (22 Mar 2006)

  22 Mar 2006; Dan Armak <danarmak@gentoo.org> +konsolekalendar-3.5.2.ebuild:
  KDE 3.5.2. Not yet released upstream, and so package.masked for now.

*konsolekalendar-3.5.1 (23 Jan 2006)

  23 Jan 2006; Dan Armak <danarmak@gentoo.org> +konsolekalendar-3.5.1.ebuild:
  Version 3.5.1. Not yet released upstream, so package.masked for now.

  17 Dec 2005; Markus Rothe <corsair@gentoo.org>
  konsolekalendar-3.5.0.ebuild:
  Added ~ppc64

  12 Dec 2005; Joseph Jezak <josejx@gentoo.org>
  konsolekalendar-3.5.0.ebuild:
  Marked ~ppc.

  10 Dec 2005; Bryan Østergaard <kloeri@gentoo.org
  konsolekalendar-3.4.3.ebuild:
  Stable on alpha.

  10 Dec 2005; Chris White <chriswhite@gentoo.org>
  konsolekalendar-3.4.3.ebuild:
  Marked x86 stable for bug #112842.

  09 Dec 2005; Joseph Jezak <josejx@gentoo.org>
  konsolekalendar-3.4.3.ebuild:
  Marked ppc stable for bug #112842.

  04 Dec 2005; Bryan Østergaard <kloeri@gentoo.org>
  konsolekalendar-3.5.0.ebuild:
  ~alpha keyword.

  29 Nov 2005; Jason Wever <weeve@gentoo.org> konsolekalendar-3.5.0.ebuild:
  Added ~sparc keyword.

  26 Nov 2005; Dan Armak <danarmak@gentoo.org> konsolekalendar-3.5.0.ebuild:
  Upstream (unreleased) tarball updated, updating digests.

  25 Nov 2005; Marcus D. Hanwell <cryos@gentoo.org>
  konsolekalendar-3.4.3.ebuild:
  Stable on amd64, bug 112842.

  24 Nov 2005; Markus Rothe <corsair@gentoo.org>
  konsolekalendar-3.4.3.ebuild:
  Stable on ppc64

  24 Nov 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  konsolekalendar-3.4.3.ebuild:
  Stable on sparc wrt #112842

*konsolekalendar-3.5.0 (22 Nov 2005)
