@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/konsolekalendar
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/konsolekalendar/ChangeLog,v 1.40 2006/03/26 17:50:52 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/konsolekalendar/ChangeLog,v 1.41 2006/03/28 00:28:59 agriffis Exp $
+
+  28 Mar 2006; Aron Griffis <agriffis@gentoo.org>
+  konsolekalendar-3.5.0.ebuild, konsolekalendar-3.5.1.ebuild,
+  konsolekalendar-3.5.2.ebuild:
+  Mark 3.5.2 3.5.1 3.5.0 ~ia64
 
   26 Mar 2006; Aron Griffis <agriffis@gentoo.org>
   konsolekalendar-3.4.3.ebuild:
